--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app" class="main-layout"></div>
     <script type="module" src="/src/main.js"></script>
+    <div>hello</div>
   </body>
 </html>
